--- a/BACK/src/main/resources/application.properties
+++ b/BACK/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=gerenciador-usuarios
+
+server.port={PORT:8002}
+spring.jpa.database=baccarin
+spring.datasource.platform=baccarin
+spring.database.driverClassName=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/gerenciador-usuarios}
+spring.datasource.username=${POSTGRESQL_USER:baccarin}
+spring.datasource.password=${POSTGRESQL_PASSWORD:123456}
+
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
